--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="letter-window">
         <h1 id="letter-title">Quiere ser mi Valentin Elizalde?</h1>
 
-        <img src="cat_heart.gif" class="cat" id="letter-cat" />
+        <img src="valel.gif" class="cat" id="letter-cat" />
 
         <div class="buttons" id="letter-buttons">
           <img src="yes.png" class="btn yes-btn" alt="Yes" />
