--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           </div>
         </div>
 
+        <p id="medio-text" class="medio-text" style="display: none">
+           Quieres salir conmigo en San valentin?
+        </p>
         <p id="final-text" class="final-text" style="display: none">
           <strong>Valentine Date:</strong> Carnita asada a la 1pm , lugar TBD
         </p>
