--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Letter Screen -->
     <div id="letter-container">
       <div class="letter-window">
-        <h1 id="letter-title">Quiere ser mi Valentin Elizalde?</h1>
+        <h1 id="letter-title">Quiere ser mi Valentin?</h1>
 
         <img src="valel.gif" class="cat" id="letter-cat" />
 
